--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-picker": "5.3.1",
     "react-native-indicators": "^0.17.0",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-otp-inputs": "^7.4.0",
