--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@sentry/react-native": "^5.15.2",
     "axios": "^1.6.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
