--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-otp-inputs": "^7.4.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.10.1",
+    "react-native-paystack-webview": "^4.1.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.1",
@@ -46,6 +47,7 @@
     "react-native-share": "^10.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "^13.10.3",
     "rn-qr-generator": "^1.4.0"
   },
   "devDependencies": {
